--- a/_Ipsa/WebContent/WEB-INF/web.xml
+++ b/_Ipsa/WebContent/WEB-INF/web.xml
@@ -17,7 +17,7 @@
   
   <!-- 데이터소스 참조 -->
   <resource-ref>
-  	<res-ref-name>jdbc/studydb</res-ref-name>
+  	<res-ref-name>jdbc/ipsa</res-ref-name>
   	<res-type>javax.sql.DataSource</res-type>
   	<res-auth>Container</res-auth>
   </resource-ref>
